ncep/gov.noaa.nws.ncep.ui.nsharp/BigNsharp/Sndglib/skparams.h

float t_totals(float *param, float *ct, float *vt);
float temp_lvl(float temp, float *param);
float wb_lvl(float temp, float *param);
float vert_tot(float *param);
float top_moistlyr(float *param);
float unstbl_lvl(float *param, float lower, float upper);
float sweat_index(float *param);
float ThetaE_diff(float *param);
float dcape(float *level, float *drtemp);
float scp(float stdir, float stspd);
float sigtorn(float stdir, float stspd);
float sigtorn_cin(float stdir, float stspd);
float advection_layer(float *param, float lower, float upper);
float coniglio1(void);