ncep/gov.noaa.nws.ncep.ui.nsharp/src/gov/noaa/nws/ncep/ui/nsharp/natives/NsharpNative.java

    	
    	float dcape(FloatByReference level, FloatByReference drtemp);
     	/**
    	 * Original signature : <code>float sweat_index(float*)</code><br>
    	 * <i>native declaration : line 49</i><br>
    	 * @deprecated use the safer methods {@link #sweat_index(java.nio.FloatBuffer)} and {@link #sweat_index(com.sun.jna.ptr.FloatByReference)} instead
    	 */
    	//@Mangling({"_Z11sweat_indexPf", "?sweat_index@@YAMPAM@Z"}) 
    	//@java.lang.Deprecated 
    	float sweat_index(FloatByReference param);
    	/**
    	 * Original signature : <code>float temp_lvl(float, float*)</code><br>
    	 * <i>native declaration : line 50</i><br>
    	 * @deprecated use the safer methods {@link #temp_lvl(float, java.nio.FloatBuffer)} and {@link #temp_lvl(float, com.sun.jna.ptr.FloatByReference)} instead
    	 */
    	//@Mangling({"_Z8temp_lvlfPf", "?temp_lvl@@YAMMPAM@Z"}) 
    	//@java.lang.Deprecated 
    	float temp_lvl(float temp, FloatByReference param);
     	/**
    	 * Original signature : <code>float ThetaE_diff(float*)</code><br>
    	 * <i>native declaration : line 51</i><br>
    	 * @deprecated use the safer methods {@link #ThetaE_diff(java.nio.FloatBuffer)} and {@link #ThetaE_diff(com.sun.jna.ptr.FloatByReference)} instead
    	 */
    	//@Mangling({"_Z11ThetaE_diffPf", "?ThetaE_diff@@YAMPAM@Z"}) 
    	//@java.lang.Deprecated 
    	float ThetaE_diff(FloatByReference param);
     	/**
    	 * Original signature : <code>float top_moistlyr(float*)</code><br>
    	 * <i>native declaration : line 52</i><br>
    	 * @deprecated use the safer methods {@link #top_moistlyr(java.nio.FloatBuffer)} and {@link #top_moistlyr(com.sun.jna.ptr.FloatByReference)} instead
    	 */
    	//@Mangling({"_Z12top_moistlyrPf", "?top_moistlyr@@YAMPAM@Z"}) 
    	//@java.lang.Deprecated 
    	float top_moistlyr(FloatByReference param);
     	/**
    	 * Original signature : <code>float t_totals(float*, float*, float*)</code><br>
    	 * <i>native declaration : line 53</i><br>
    	 * @deprecated use the safer methods {@link #t_totals(java.nio.FloatBuffer, java.nio.FloatBuffer, java.nio.FloatBuffer)} and {@link #t_totals(com.sun.jna.ptr.FloatByReference, com.sun.jna.ptr.FloatByReference, com.sun.jna.ptr.FloatByReference)} instead
    	 */
    	//@Mangling({"_Z8t_totalsPfPfPf", "?t_totals@@YAMPAMPAMPAM@Z"}) 
    	//@java.lang.Deprecated 
    	float t_totals(FloatByReference param, FloatByReference ct, FloatByReference vt);
     	/**
    	 * Original signature : <code>float unstbl_lvl(float*, float, float)</code><br>
    	 * <i>native declaration : line 54</i><br>
    	 * @deprecated use the safer methods {@link #unstbl_lvl(java.nio.FloatBuffer, float, float)} and {@link #unstbl_lvl(com.sun.jna.ptr.FloatByReference, float, float)} instead
    	 */
    	//@Mangling({"_Z10unstbl_lvlPfff", "?unstbl_lvl@@YAMPAMMM@Z"}) 
    	//@java.lang.Deprecated 
    	float unstbl_lvl(FloatByReference param, float lower, float upper);
     	/**
    	 * Original signature : <code>float vert_tot(float*)</code><br>
    	 * <i>native declaration : line 55</i><br>
    	 * @deprecated use the safer methods {@link #vert_tot(java.nio.FloatBuffer)} and {@link #vert_tot(com.sun.jna.ptr.FloatByReference)} instead
    	 */
    	//@Mangling({"_Z8vert_totPf", "?vert_tot@@YAMPAM@Z"}) 
    	//@java.lang.Deprecated 
    	float vert_tot(FloatByReference param);
    	/**
    	 * Original signature : <code>float wb_lvl(float, float*)</code><br>
    	 * <i>native declaration : line 56</i><br>
    	 * @deprecated use the safer methods {@link #wb_lvl(float, java.nio.FloatBuffer)} and {@link #wb_lvl(float, com.sun.jna.ptr.FloatByReference)} instead
    	 */
    	//@Mangling({"_Z6wb_lvlfPf", "?wb_lvl@@YAMMPAM@Z"}) 
    	//@java.lang.Deprecated 
    	float wb_lvl(float temp, FloatByReference param);
     	
    	//from wind.h
    	float helicity ( float lower, float upper, float sdir, float sspd,
    			FloatByReference phel, FloatByReference nhel );
    	void sr_wind ( float pbot, float ptop, float stdir, float stspd,
    			FloatByReference mnu, FloatByReference mnv, FloatByReference wdir, FloatByReference wspd );
    	void mean_wind ( float pbot, float ptop, FloatByReference mnu, FloatByReference mnv,
    			FloatByReference wdir, FloatByReference wspd );
    	void wind_shear ( float pbot, float ptop, FloatByReference shu, FloatByReference shv,
    			FloatByReference sdir, FloatByReference smag );
    	float ucomp( float wdir, float wspd );
    	float vcomp( float wdir, float wspd );
	
    	//from thermo.h
    	float thetae ( float pres, float temp, float dwpt );
    	void drylift ( float p1, float t1, float td1, FloatByReference p2, FloatByReference t2 );
    	float wetlift ( float pres, float temp, float pres2 );
    	float wetbulb ( float pres, float temp, float dwpt );
    	void effective_inflow_layer_thermo(float ecape, float ecinh, FloatByReference p_bot,FloatByReference p_top);
    	float relh(float pres, FloatByReference param);
    	//from xwvid.c
    	short vert_coords ( float hgt, float maxhgt );
    	void corfidi_MCS_motion(FloatByReference fpu, FloatByReference fpv, FloatByReference fp_dir, FloatByReference fp_spd, FloatByReference bpu, FloatByReference bpv, FloatByReference bp_dir, FloatByReference bp_spd);
    	void bunkers_left_motion(FloatByReference u, FloatByReference v, FloatByReference dir, FloatByReference spd);
    	void bunkers_storm_motion(FloatByReference u, FloatByReference v, FloatByReference dir, FloatByReference spd);
    	float damaging_wind();
    	float esp();
    	float coniglio1();
    	float scp(float stdir, float stspd);
    	float sigtorn_cin(float stdir, float stspd);
    	float sigtorn(float stdir, float stspd);
    	float sigtorn_fixed(float stdir, float stspd);
    	float sigtorn_test(float stdir, float stspd);
    	
    	
    	float advection_layer(FloatByReference param, float lower, float upper);
    }
    /*
    public interface Nsharp95Library extends Library {
    	//library name is libnsharp.so. but only use "nsharp" as lib name when loading
    	NsharpLibrary INSTANCE = (NsharpLibrary) Native.loadLibrary("nsharp", NsharpLibrary.class);
    	/// <i>native declaration : line 1</i>
    	public static class _lplvalues extends Structure {
    		/// C type : char[40]
    		public byte[] desc = new byte[(40)];
    		public float pres;
    		public float temp;
    		public float dwpt;
    		public short flag;
    		public  _lplvalues() {
    			super();
    		}
    		/// @param desc C type : char[40]
    		public  _lplvalues(byte desc[], float pres, float temp, float dwpt, short flag) {
    			super();
    			if (desc.length != this.desc.length) 
    				throw new java.lang.IllegalArgumentException("Wrong array size !");
    			this.desc = desc;
    			this.pres = pres;
    			this.temp = temp;
    			this.dwpt = dwpt;
    			this.flag = flag;
    		}
    		protected ByReference newByReference() { return new ByReference(); }
    		protected ByValue newByValue() { return new ByValue(); }
    		protected _lplvalues newInstance() { return new _lplvalues(); }
    		public static class ByReference extends _lplvalues implements Structure.ByReference {
    			
    		}
    		public static class ByValue extends _lplvalues implements Structure.ByValue {
    			
    		}
    	}
    	/// <i>native declaration : line 10</i>
    	public static class _parcel extends Structure{
    		public float lplpres;
    		public float lpltemp;
    		public float lpldwpt;
    		public float blayer;
    		public float tlayer;
    		public float entrain;
    		public float lclpres;
    		public float lfcpres;
    		public float elpres;
    		public float mplpres;
    		public float bplus;
    		public float bminus;
    		public float bfzl;
    		public float li5;
    		public float li3;
    		public float brn;
    		public float limax;
    		public float limaxpres;
    		public float cap;
    		public float cappres;
    		public  _parcel() {
    			super();
    		}
    		protected ByReference newByReference() { return new ByReference(); }
    		protected ByValue newByValue() { return new ByValue(); }
    		protected _parcel newInstance() { return new _parcel(); }
    		public static class ByReference extends _parcel implements Structure.ByReference {
    			
    		}
    		public static class ByValue extends _parcel implements Structure.ByValue {
    			
    		}
    	}
    	
    	//from our own SndgParms
    	public static class SndgParms extends com.sun.jna.Structure {
    		public float omega;
    		public float pres;
    		public float hght;
    		public float temp;
    		public float dwpt;
    		public float drct;
    		public float sped;
    		public  SndgParms() {
    			super();
    		}
    		public  SndgParms(float omega, float pres, float hght, float temp, float dwpt, float drct, float sped) {
    			super();
    			this.omega = omega;
    			this.pres = pres;
    			this.hght = hght;
    			this.temp = temp;
    			this.dwpt = dwpt;
    			this.drct = drct;
    			this.sped = sped;
    		}
    		
    		public void fillData(float omega, float pres, float hght, float temp, float dwpt, float drct, float sped) {
    			this.omega = omega;
    			this.pres = pres;
    			this.hght = hght;
    			this.temp = temp;
    			this.dwpt = dwpt;
    			this.drct = drct;
    			this.sped = sped;
    		}
    		protected ByReference newByReference() { return new ByReference(); }
    		protected ByValue newByValue() { return new ByValue(); }
    		protected SndgParms newInstance() { return new SndgParms(); }
    		public static class ByReference extends SndgParms implements Structure.ByReference {
    			
    		}
    		public static class ByValue extends SndgParms implements Structure.ByValue {
    			
    		}
    		
    	}
    	
    	public static class StormSlinkyStr extends Structure {
    		public int size;
    		public float tottim;
    		public float angl;
    		/// C type : float[200][2]
    		public float[] tsuv = new float[200 * 2];
    		public  StormSlinkyStr() {
    			super();
    			size=-1;
    		}
    		/// @param tsuv C type : float[200][2]
    		public  StormSlinkyStr(int size, float tottim, float angl, float tsuv[]) {
    			super();
    			this.size = size;
    			this.tottim = tottim;
    			this.angl = angl;
    			if (tsuv.length != this.tsuv.length) 
    				throw new java.lang.IllegalArgumentException("Wrong array size !");
    			this.tsuv = tsuv;
    		}
    		protected ByReference newByReference() { return new ByReference(); }
    		protected ByValue newByValue() { return new ByValue(); }
    		protected StormSlinkyStr newInstance() { return new StormSlinkyStr(); }
     		public static class ByReference extends StormSlinkyStr implements Structure.ByReference {

    		}
    		public static class ByValue extends StormSlinkyStr implements Structure.ByValue {

    		}

    		public float getTottim() {
    			return tottim;
    		}
    		public void setTottim(float tottim) {
    			this.tottim = tottim;
    		}
    		public float getAngl() {
    			return angl;
    		}
    		public void setAngl(float angl) {
    			this.angl = angl;
    		}
    		public float[] getTsuv() {
    			return tsuv;
    		}
    		public void setTsuv(float[] tsuv) {
    			this.tsuv = tsuv;
    		}
    		public int getSize() {
    			return size;
    		}
    		public void setSize(int size) {
    			this.size = size;
    		}

    	}
